Add header and footer, update styles

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,28 @@
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+
+    <!-- header -->
+    <header class="bg-black pad-ver-1">
+        <div class="container">
+            <h1 class="txt-white">SPADES+</h1>
+            <!-- <nav>
+                <button class="nav-section active">scoreboard</button>
+                <button class="nav-section">rules</button>
+            </nav> -->
+        </div>
+    </header>
+
+    <div id="root" class="container bg-white"></div>
+
+    <!-- footer -->
+    <footer class="bg-black pad-ver-1">
+        <div class="container">
+            <p class="txt-white">created 2023 by madison cagle</p>
+            <a href="https://github.com/madisoncagle"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </footer>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
