Add undo functionality

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- header -->
     <header class="bg-black pad-ver-1">
         <div class="container header">
-            <h1 class="txt-white">SPADES+</h1>
+            <a href="#"><h1 class="txt-white">SPADES+</h1></a>
             <a href="." class="link txt-white"><p>new &nbsp;</p><i class="fa-solid fa-pen-to-square"></i></a>
         </div>
     </header>
