Begin UI changes

--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,14 @@
     <title>Spades+</title>
 </head>
 
-<body class="bg-white">
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <!-- header -->
     <header class="bg-black pad-ver-1">
         <div class="container header">
             <a href="#"><h1 class="txt-white">SPADES+</h1></a>
-            <a href="." class="link txt-white"><p>new &nbsp;</p><i class="fa-solid fa-pen-to-square"></i></a>
+            <a href="." class="link txt-white"><p>New &nbsp;</p><i class="fa-solid fa-pen-to-square"></i></a>
         </div>
     </header>
 
@@ -49,7 +49,7 @@
     <!-- footer -->
     <footer class="bg-black pad-ver-1">
         <div class="container flex-space-between">
-            <p class="txt-white txt-small txt-semibold">created 2023 by madison cagle</p>
+            <p>Created 2023 by Madison Cagle</p>
             <a href="https://github.com/madisoncagle" class="link txt-white"><i
                     class="fa-brands fa-github txt-125"></i></a>
         </div>
