--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <header class="bg-black pad-ver-1">
         <div class="container header">
             <a href="#"><h1 class="txt-white">SPADES+</h1></a>
-            <a href="." class="link txt-white"><p>New &nbsp;</p><i class="fa-solid fa-pen-to-square"></i></a>
+            <a href="." class="link txt-white"><p>New game &nbsp;</p><i class="fa-solid fa-pen-to-square"></i></a>
         </div>
     </header>
 
