Minor UI changes, add header menu

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,22 @@
     <!-- header -->
     <header class="bg-black pad-ver-1">
         <div class="container header">
-            <a href="#"><h1 class="txt-white">SPADES+</h1></a>
-            <a href="." class="link txt-white"><p>New game &nbsp;</p><i class="fa-solid fa-pen-to-square"></i></a>
+            <a href="#">
+                <h1 class="txt-white">SPADES+</h1>
+            </a>
+            <menu>
+                <div class="menu-item">
+                    <a href="." class="link txt-white">
+                        <p>NEW GAME &nbsp;</p>
+                    </a>
+                </div>
+
+                <div class="menu-item">
+                    <a href="#" class="link txt-white">
+                        <p>RULES &nbsp;</p>
+                    </a>
+                </div>
+            </menu>
         </div>
     </header>
 
