Begin color and font change

--- a/public/index.html
+++ b/public/index.html
@@ -29,22 +29,22 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <!-- header -->
-    <header class="bg-black pad-ver-1">
+    <header>
         <div class="container header">
             <a href="#">
-                <h1 class="txt-white">SPADES+</h1>
+                <h1>SPADES<span>+</span></h1>
             </a>
-            
+
             <menu>
                 <div class="menu-item">
-                    <a href="." class="link txt-white">
-                        <p>NEW GAME &nbsp;</p>
+                    <a href="." class="link">
+                        <p>NEW GAME</p>
                     </a>
                 </div>
 
                 <div class="menu-item">
-                    <a href="#" class="link txt-white">
-                        <p>RULES &nbsp;</p>
+                    <a href="#" class="link">
+                        <p>RULES</p>
                     </a>
                 </div>
             </menu>
@@ -53,19 +53,15 @@
 
     <!-- main -->
     <main class="pad-ver-1">
-        <div class="container ver-gap-1">
-            <h2 class="txt-center">SCOREBOARD</h2>
-
-            <!-- react elements go here -->
-            <div id="root" class="flex-wrap"></div>
-        </div>
+        <!-- react elements go here -->
+        <div id="root" class="container flex-wrap"></div>
     </main>
 
     <!-- footer -->
-    <footer class="bg-black pad-ver-1">
+    <footer>
         <div class="container flex-space-between">
             <p>Created 2023 by Madison Cagle</p>
-            <a href="https://github.com/madisoncagle" class="link txt-white"><i
+            <a href="https://github.com/madisoncagle" target="_blank" class="link"><i
                     class="fa-brands fa-github txt-125"></i></a>
         </div>
     </footer>
