Begin UI updates

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
     <!-- header -->
     <header>
-        <div class="container header">
+        <div class="container">
             <a href="#">
                 <h1>SPADES<span>+</span></h1>
             </a>
@@ -38,13 +38,13 @@
             <menu>
                 <div class="menu-item">
                     <a href="." class="link">
-                        <p>NEW GAME</p>
+                        <p>New Game</p>
                     </a>
                 </div>
 
                 <div class="menu-item">
                     <a href="#" class="link">
-                        <p>RULES</p>
+                        <p>Rules</p>
                     </a>
                 </div>
             </menu>
@@ -52,17 +52,17 @@
     </header>
 
     <!-- main -->
-    <main class="pad-ver-1">
+    <main>
         <!-- react elements go here -->
-        <div id="root" class="container flex-wrap"></div>
+        <div id="root" class="container"></div>
     </main>
 
     <!-- footer -->
     <footer>
-        <div class="container flex-space-between">
+        <div class="container">
             <p>Created 2023 by Madison Cagle</p>
             <a href="https://github.com/madisoncagle" target="_blank" class="link"><i
-                    class="fa-brands fa-github txt-125"></i></a>
+                    class="fa-brands fa-github"></i></a>
         </div>
     </footer>
 
