--- a/public/index.html
+++ b/public/index.html
@@ -28,41 +28,36 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <!-- header -->
     <header>
         <div class="container">
-            <a href="#">
+            <a href=".">
                 <h1>SPADES<span>+</span></h1>
             </a>
 
             <menu>
                 <div class="menu-item">
-                    <a href="." class="link">
-                        <p>New Game</p>
-                    </a>
+                    <p class="link" onClick={onStartNewGame}>New Game</p>
                 </div>
 
                 <div class="menu-item">
-                    <a href="#" class="link">
-                        <p>Rules</p>
-                    </a>
+                    <p class="link" onClick={onViewRules}>Rules</p>
                 </div>
             </menu>
         </div>
     </header>
 
-    <!-- main -->
+    <!-- root -->
     <main>
-        <!-- react elements go here -->
         <div id="root" class="container"></div>
     </main>
 
-    <!-- footer -->
+
     <footer>
         <div class="container">
             <p>Created 2023 by Madison Cagle</p>
-            <a href="https://github.com/madisoncagle" target="_blank" class="link"><i
-                    class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/madisoncagle" target="_blank" rel="noreferrer" class="link">
+                <i class="fa-brands fa-github"></i>
+            </a>
         </div>
     </footer>
 
